# sso-system

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO  api.js  build.sh  docker-compose.example.yml  docker-compose.yml  functions.js  html.js  index.js  nextpass.js  package-lock.json  package.json  renovate.json
.github/workflows/: docker-image.yml  rust.yml
classes/: Crypto.js  DatabaseError.js  ErrorError.js  ErrorHandler.js  ExpressDB.js  ExpressSQL.js  Log.js  Logger.js  LoggerError.js  SQLDatatypes.js  Store.js  eh.js.old
classes‎/: Logger.js  SQLDatatypes.js
models/: avatar.js  avatars.js  blacklist.js  forgotPasswords.js  profile.js  profiles.js  pwdHashes.js  pwdSalts.js  pwddb.js  salt_pwd.js  users.js
public/: index.html
src/: App.css  App.js  authenticate.rs  cleanup.rs  constants.rs  cors.rs  environment.rs  errors.rs  gtwalsheimpro.css  index.css  index.js  main.rs  utilities.rs
src/database/: blacklist.rs  code.rs  files.rs  mod.rs  profile.rs  scheme.rs  session.rs  user.rs
src/routes/: account_settings.rs  current_user.rs  delete.rs  forgot.rs  ip.rs  login.rs  logout.rs  logout_all.rs  logout_other.rs  mfa.rs  mod.rs  profile_settings.rs  register.rs  service.rs  session.rs  user.rs  validate.rs
