[package]
name = "sso-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
futures-util = "0.3.25"
regex = "1.7.1"

dashmap = "5.4.0"
lazy_static = "1.4.0"
once_cell = "1.17.0"

env_logger = "0.10.0"
log = "0.4.17"

aes-gcm = "0.10.1"
bcrypt = "0.13.0"
rand = "0.8.5"

actix-web = "4.2.1"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-extensible-rate-limit = "0.2.1"

reqwest = "0.11.13"
serde = "1.0.152"
serde_json = "1.0.91"

mongodb = "2.3.1"
jsonwebtoken = "8.2.0"
ulid = "1.0.0"

lettre = "0.10"

totp-rs = { version = "4.1.0", features = ["qr"] }
