[package]
name = "sso-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
futures-util = "0.3.28"
regex = "1.9.1"

dashmap = "5.5.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"

env_logger = "0.10.0"
log = "0.4.19"

aes-gcm = "0.10.2"
bcrypt = "0.15.0"
rand = "0.8.5"

actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-extensible-rate-limit = "0.2.1"

reqwest = "0.11.18"
serde = "1.0.178"
serde_json = "1.0.104"

mongodb = "2.6.0"
jsonwebtoken = "8.3.0"
ulid = "1.0.0"

lettre = "0.10"

totp-rs = { version = "4.2.0", features = ["qr"] }
