[package]
name = "sso-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
futures-util = "0.3.30"
regex = "1.10.4"

dashmap = "6.0.0"
lazy_static = "1.4.0"
once_cell = "1.19.0"

env_logger = "0.11.3"
log = "0.4.21"

aes-gcm = "0.10.3"
bcrypt = "0.15.1"
rand = "0.8.5"

actix-web = "4.5.1"
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-extensible-rate-limit = "0.4.0"

reqwest = "0.12.4"
serde = "1.0.199"
serde_json = "1.0.116"

mongodb = "3.0.0"
jsonwebtoken = "9.3.0"
ulid = "1.1.2"

lettre = { version = "0.11", features = ["async-std1", "async-std1-rustls-tls", "builder", "smtp-transport"], default-features = false }

totp-rs = { version = "5.5.1", features = ["qr"] }
passkey = "0.3.0"
opaque-ke = "3.0.0-pre.4"
dotenvy = "0.15.7"
